samples/_failures_safe/1761421064_89c2a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_caa52b3e.c: In function ‘main’:
./samples/SAFE/__tmp_caa52b3e.c:140:88: error: expected ‘)’ at end of input
  140 |                 if (!get_matrix_dimensions(&a.rows, &a.cols) || !matrix_init(&a, a.rows
      |                                                                             ~          ^
      |                                                                                        )
./samples/SAFE/__tmp_caa52b3e.c:140:66: error: too few arguments to function ‘matrix_init’
  140 |                 if (!get_matrix_dimensions(&a.rows, &a.cols) || !matrix_init(&a, a.rows
      |                                                                  ^~~~~~~~~~~
./samples/SAFE/__tmp_caa52b3e.c:21:5: note: declared here
   21 | int matrix_init(struct Matrix *m, int rows, int cols) {
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_caa52b3e.c:140:17: error: expected declaration or statement at end of input
  140 |                 if (!get_matrix_dimensions(&a.rows, &a.cols) || !matrix_init(&a, a.rows
      |                 ^~
./samples/SAFE/__tmp_caa52b3e.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_caa52b3e.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_caa52b3e.c:140:17: error: expected declaration or statement at end of input
